Archive2/0b/001e39f04e8c4c/output
main.cpp: In function 'int main()':
main.cpp:28:5: error: ambiguous overload for 'operator++' (operand type is 'A')
     ++a;
     ^
main.cpp:28:5: note: candidates are:
main.cpp:9:8: note: A& A::operator++()
     A& operator++() { cout << 2 << endl; return *this; }
        ^
main.cpp:16:4: note: A& operator++(A&)
 A& operator++(A& a) { cout << 6 << endl; return a; }
    ^
